--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "summer-boot": "^0.3.0"
+    "mysql": "^2.18.1",
+    "summer-boot": "^0.3.0",
+    "typeorm": "^0.2.29"
   }
 }
