--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/formidable": "^1.0.32",
+    "formidable": "^1.2.2",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "summer-boot": "^0.3.15",
+    "summer-boot": "^0.3.2",
     "typeorm": "^0.2.29"
   }
 }
